# jCAE

./: .gitignore  README  jCAE-auto-installer.sh
amibe/: ChangeLog  ChangeLog.jCAE  build.properties  build.xml  junit.log4j.properties  junit.logging.properties  log4j.properties  nbbuild.xml
amibe/groovy/: amibeExporter.groovy  amibeMesher.groovy  amibeReporter.groovy  amibeReporter1D.groovy  amibeSmoother.groovy  amibeSmoother2D.groovy  amibeViewer.groovy  amibebatch  clip.groovy  countf.groovy  decimate.groovy  export.groovy  fixsmalledges.groovy  mesh.groovy  remesh.groovy  report.groovy  smooth2d.groovy  smooth3d.groovy  smooth3dBg.groovy  soup2amibe.groovy  swap.groovy  unv2amibe.groovy  unvViewer.groovy  view.groovy  viewOEMM.groovy  viewvtk.groovy  vtp2amibe.groovy
amibe/nbproject/: project.properties  project.xml
amibe/python/: amibe2unv.py  amibebatch  animate.py  badtriangles.py  classify.py  clean.py  countf.py  decimate.py  export.py  extract.py  fixsmalledges.py  improvevalence.py  mesh.py  partition.py  random_triangles.py  refine.py  refineandclean.py  remesh.py  remeshBeams.py  remeshSingularity.py  removeDegenerated.py  report.py  smooth3d.py  smooth3dBg.py  split.py  split_tagged.py  submesh.py  swap.py  uniformRefine.py  unv2amibe.py  unvreader.py  valence.py  view.py  vtp2amibe.py
amibe/src/: log4j.properties  logging.properties
htdocs/: README  forrest.properties  publish.sh
jcae/: README  README.openjdk  build.xml
jcae/amibe/: build.xml  manifest.mf
jcae/amibe-occ/: build.xml
jcae/jython/: build.xml  jython-2.5-standalone.patch  jython-2.7.1-standalone.patch  jython-2.7b3-standalone.patch  manifest.mf
jcae/launchers/: README.txt  app-sh.patch  jcae.rc  launcher.patch
jcae/nbproject/: platform.properties  project.properties  project.xml
jcae/occjava-nb/: build.xml  manifest.mf
jcae/trove/: build.xml  manifest.mf
jcae/tweakui/: build.xml
jcae/vecmath/: build.xml
jcae/viewer3d/: build.xml
jcae/viewer3d-amibe/: build.xml
jcae/vtk/: build.xml  manifest.mf
jcae/vtk-amibe/: build.xml
jcae/vtk-util/: build.xml  manifest.mf
netbeans-suite/: ChangeLog  README  build-all.sh  build.xml  make-dist-Linux.sh  make-dist-Win32.sh  setVersion.sh
netbeans-suite/amibe/: build.xml
netbeans-suite/amibe-occ/: build.xml  manifest.mf
netbeans-suite/core/: INSTALL  build.xml  manifest.mf
netbeans-suite/jcae-netbeans/: INSTALL  manifest.mf
netbeans-suite/jython/: build.xml  manifest.mf
netbeans-suite/launchers/: launcher.patch  make-jcae.sh
netbeans-suite/mesh-algos/: build.xml  manifest.mf
netbeans-suite/nbproject/: build-impl.xml  genfiles.properties  platform.properties  project.properties
netbeans-suite/occjava/: INSTALL  build.xml  manifest.mf
netbeans-suite/occjava-nb/: INSTALL  build.xml  manifest.mf
netbeans-suite/tweakui/: build.xml  manifest.mf
netbeans-suite/vecmath/: build.xml  manifest.mf
netbeans-suite/viewer3d/: build.xml
netbeans-suite/viewer3d-amibe/: build.xml
netbeans-suite/vtk/: build.xml  manifest.mf
netbeans-suite/vtk-amibe/: build.xml
netbeans-suite/vtk-util/: build.xml  manifest.mf
netbeans-suite/vtk-util-amibe/: build.xml
occjava/: AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  Makefile.mingw  README  README.mingw  Swig.rules  acsite.m4  autogen.sh  build-mingw  build.bat  build.properties  build.xml  config.h.in  configure.ac  occ-BRepMesh_FastDiscret.patch  occ-BRepMesh_FastDiscretFace.patch  occ-mingw-makefile.patch  occ-mingw-port.patch  occjava-swig.vcproj  occjava-vs2008.vcproj
occjava/cmake/: FindOCE.cmake
occjava/doc/: Example1.java  runExample1.sh
occjava/src/: APIHeaderSection_MakeHeader.i  BRep.i  BRepAlgoAPI.i  BRepBuilderAPI.i  BRepCheck.i  BRepFilletAPI.i  BRepLib.i  BRepOffsetAPI.i  BRepOffsetAPI_Sewing.i  BRepPrimAPI.i  BRepTools.i  BRep_Tool.i  GC.i  Geom.i  GeomAPI.i  GeomAbs.i  GeomLProp_SLProps.i  Makefile.am  OccJava.i  Poly.i  ShapeBuild.i  ShapeFix.i  ShapeUpgrade.i  Standard.i  TCol.i  TopAbs.i  TopTools.i  TopoDS.i  TopoDS_Shape.i  XSControl.i  gp.i  jnistream.cxx  jnistream.hxx
occjava/src-java-test/org/jcae/opencascade/jni/: BRepBuilder.java  CircleExtrudeQuilt.java  Curvature.java  Dimensions.java  Explorer.java  FixSmallEdges.java  GeomPlaneDowncast.java  HoleFilletChamfer.java  Jina2006.java  NativeStream.java  RemoveFace.java  STEPLabel.java  SplitFace.java  TopoJunction.java  TrimmedSphere.java  Wire.java
occjava/src-java/org/jcae/opencascade/: Shape.java  Utilities.java
occjava/src-java/org/jcae/opencascade/jni/: BRepOffsetAPI_Sewing.java
occjava/src-java/org/jcae/opencascade/test/: All.java  BRepBuilder.java  CircleExtrudeQuilt.java  Curvature.java  Dimensions.java  Explorer.java  FixSmallEdges.java  HoleFilletChamfer.java  Jina2006.java  NativeStream.java  RemoveFace.java  STEPLabel.java  SplitFace.java  Test3.java  Test7.java  TopoJunction.java  Wire.java
occjava/src-java/test/: Test1.java  Test2.java  Test3.java  Test4.java  Test5.java  Test6.java  Utilities.java
occjava/test/input/: cube.stp
scripts/: build.sh  jCAE-auto-installer-linux.sh  jCAE-auto-installer-windows.sh  jCAE-auto-installer.sh  nbinit.xml
viewer3d/: ChangeLog  Doxyfile  build.properties  build.xml
viewer3d-amibe/: ChangeLog  build.properties  build.xml
viewer3d/doc/: default.css  specification.html  summary.js
viewer3d/nbproject/: build-impl.xml  project.properties  project.xml
vtk-amibe/: build.properties  build.xml
vtk-amibe-occ/: build.xml
vtk-amibe-occ/nbproject/: project.properties  project.xml
vtk-util/: README  README.vtk.mingw  build-impl.xsl  build.xml  toolchain-i686-w64-mingw32.cmake  toolchain-mingw.cmake  toolchain-x86_64-w64-mingw32.cmake
vtk-util-amibe/: build.properties  build.xml
vtk-util/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
vtk-util/patch/: 01_depth.patch  02_displayList.patch  03_offset.patch  04_translucent.patch  05_underscore.patch  06_warning.patch  07_zbuffer.patch  README.txt  apply-5-2.sh  apply.sh  depth.patch  displayList.patch  offset.patch  translucent.patch  (+2 more)
(+1458 files in other folders)
